# ra-timecard-recorder

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  database.py  fly.toml  manifest.yml  model.py  pyproject.toml  requirements.txt  run.py
app/: config.py  context.py  workrules.py
app/assets/: README.md  current_app_home_block.json
app/db/: database.py  model.py
app/listeners/: __init__.py
app/listeners/commands/: __init__.py  admin_download_all_records.py  download_csv.py  get_working_hours.py  init.py  register_RA.py
app/listeners/events/: __init__.py  on_mention.py  on_message_delete.py  on_message_events_to_ignore.py  on_message_update.py
assets/: README.md  current_app_home_block.json  manifest.yml
config/: README.md  bot_config.json  db_secret_config.json.template  slack_secret_config.json.template
dev/: Dockerfile  README.md  docker-compose.yml
dev/utils/: README.md
dev/utils/view_publisher/: README.md  publish_view.py
dev_utils/dev_database/: README.md  docker-compose.yml
dev_utils/dev_database/init/: init.sql
misc/: README.md  manifest.yml
utils/: README.md
utils/view_publisher/: README.md  publish_view.py
