[project]
name = "ra-timecard-recorder"
version = "1.0.0"
description = "Slack Bot that enables RAs to easily record and retrieve timecard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "sentry-sdk>=2.48.0",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0.45",
]
